--- a/demo.ipynb
+++ b/demo.ipynb
@@ -24,13 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "5\n",
+      "Location: 5, Branch: B\n",
+      "Location: 4, Branch: C\n",
+      "Location: 3, Branch: B\n",
+      "Location: 2, Branch: C\n",
+      "Location: 1, Branch: B\n",
+      "Location: 0, Branch: A\n",
       "0\n"
      ]
     }
@@ -38,28 +45,48 @@
    "source": [
     "\n",
     "\n",
-    "# WINDOWS = (TimeWindow(10,15), \n",
-    "#            TimeWindow(3,18), \n",
-    "#            TimeWindow(10,18), \n",
-    "#            TimeWindow(15,35), \n",
-    "#            TimeWindow(40,45), \n",
-    "#            TimeWindow(75, 100), \n",
-    "#            TimeWindow(75,100))\n",
-    "# travel_times = (6,2,4,10,10,15)\n",
+    "WINDOWS = (TimeWindow(10,15), \n",
+    "           TimeWindow(3,18), \n",
+    "           TimeWindow(10,18), \n",
+    "           TimeWindow(15,35), \n",
+    "           TimeWindow(40,45), \n",
+    "           TimeWindow(75, 100), \n",
+    "           TimeWindow(75,100))\n",
+    "travel_times = (6,2,4,10,10,15)\n",
     "\n",
     "# WINDOWS = (TimeWindow(0,10), \n",
     "#            TimeWindow(5,9),\n",
     "#            TimeWindow(40,40))\n",
     "# travel_times = (9,10)\n",
     "\n",
-    "WINDOWS = (TimeWindow(10,20), TimeWindow(100,100))\n",
-    "travel_times = (10,)\n",
+    "# WINDOWS = (TimeWindow(10,20), TimeWindow(100,100))\n",
+    "# travel_times = (10,)\n",
     "\n",
     "# WINDOWS = (TimeWindow(0,10), TimeWindow(5,9), TimeWindow(40,40))\n",
     "# travel_times = (9,10)\n",
     "\n",
     "TS = TripStats(WINDOWS, travel_times)\n",
     "temp = smart_trip(TS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, (False, 0, <utils.TripStats at 0x25e4b3d7ef0>))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp"
    ]
   },
   {
