--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trip Scheduling Problem\n",
+    "\n",
+    "The following is a demonstration of a Python implementation of the SmartTrip algorithm for HOS-compliant truck scheduling: https://www2.isye.gatech.edu/~ms79/publications/archetti-savelsbergh-revision.pdf. Given dock time windows and drive times between docks, SmartTrip checks the feasibility of the schedule and attempts to establish feasibility by optimally timing resting periods."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,16 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = smart_trip(TS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,13 +101,21 @@
     }
    ],
    "source": [
+    "results = smart_trip(TS)\n",
     "print(\"Is this schedule possible? {}\".format(results[0]))\n",
     "TS = results[1]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Construct trip legs from algo results."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -148,8 +156,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>depart</th>\n",
        "      <th>arrive</th>\n",
+       "      <th>depart</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -165,8 +173,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>55.0</td>\n",
        "      <td>45.0</td>\n",
+       "      <td>55.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -175,8 +183,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21.0</td>\n",
        "      <td>18.0</td>\n",
+       "      <td>21.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -193,24 +201,24 @@
        "</div>"
       ],
       "text/plain": [
-       "   depart  arrive\n",
+       "   arrive  depart\n",
        "6   100.0   100.0\n",
        "5    75.0    75.0\n",
-       "4    55.0    45.0\n",
+       "4    45.0    55.0\n",
        "3    35.0    35.0\n",
-       "2    21.0    18.0\n",
+       "2    18.0    21.0\n",
        "1    16.0    16.0\n",
        "0    10.0    10.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "report = TS.get_report()[['t_a', 't_d']].copy()\n",
-    "report.columns = ['depart', 'arrive']\n",
+    "report = TS.get_report()[['t_d', 't_a']].copy()\n",
+    "report.columns = ['arrive', 'depart']\n",
     "report"
    ]
   },
